...
    <string name="create">Create</string>
    <string name="back">Back</string>
    <string name="profile_image">Profile Image</string>
    <string name="username_placeholder">\@username</string>
    <string name="edit">Edit</string>
    <string name="friends">Friends</string>
    <string name="history">History</string>
    <string name="requests">Requests</string>
    <string name="logout">Logout</string>
    <string name="button_follow">Follow</string>
    <string name="button_requested">Requested</string>
    <string name="button_unfollow">Unfollow</string>
    <string name="sort_prompt">Sort</string>
...
